<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Crumbs</string>
    <string name="action_settings">Settings</string>
    <string name="profile_pic_des">This is the profile picture</string>
    <string name="directions_button_des">Map</string>
    <string name="random_button_des">Random</string>
    <string name="favorites_button_des">Favorites</string>
    <string name="title_activity_map__view_">Map_View_Activity</string>
    <string name="title_activity_favorites__view_">Favorites_View_Activity</string>
    <string name="title_activity_random__generator_">Random_Generator_Activity</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter Location</string>
    <string name="hnt_et_location_2">Enter Destination</string>
    <string name="action_search">Search Destinations</string>
    <string name="action_direction">Directions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_strt_location">Enter Start Location&#8230; </string>
    <string name="str_end_location">Enter End Location&#8230;</string>
    <string name="title_activity_directions_">Directions_Activity</string>
    <string name="strt_loc_pin_drop">Start Location Pin Drop</string>
    <string name="end_loc_pin_drop">End Location Pin Drop</string>
    <string name="str_get_route">Get Route</string>
    <string name="str_yelp_search_query">horchatas, fast food&#8230;</string>
    <string name="str_yelp_filter_time">Time</string>
    <string name="str_yelp_filter_distance">Distance</string>
    <string name="title_activity_launch__screen_">Launch_Screen_Activity</string>
    <string name="str_launch_img">Team Logo</string>
    <string name="title_activity_restaurant_">Restaurant_Activity</string>
    <string name="str_restaurant_img">Restaurant Image</string>
    <string name="str_restaurant_name">Restaurant Name</string>
    <string name="str_restaurant_fav">Restaurant Favorite</string>
    <string name="str_restaurant_addr">Restaurant Address</string>
    <string name="str_custom_image">Direction Image</string>
    <string name="str_welcome_to_random_generator">Welcome to Random Generator!</string>
    <string name="str_ready">Are you ready?</string>
    <string name="str_spin">Spin!</string>
    <string name="title_activity_initial__install_">Initial_Install_Activity</string>
    <string name="str_choose_image">Choose image&#8230;</string>
    <string name="str_enter_name">Enter Your Name:</string>
    <string name="str_enter_name_hint">Your name&#8230;</string>
    <string name="str_done">Done</string>
    <string name="str_find">Find</string>
    <string name="str_my_current_location">Current Location</string>
    <string name="str_restaurant_name_placeholder">Restaurant Name</string>
    <string name="str_restaruant_address_placeholder">Restaurant Address</string>
    <string name="str_restaurant_phone_number_placeholder">Restaurant Phone Number</string>
    <string name="str_restaurant_rating">0.0/5.0</string>
    <string name="str_restaurant_website_placeholder">Restaurant Website</string>
    <string name="str_restaurant_dishes_placeholder">Dishes</string>
    <string name="str_restaurant_best_review_placeholder">Best Review</string>
    <string name="title_activity_filters_">Filters_Activity</string>
    <string name="str_filters">Filters</string>
    <string name="str_find_filters">Find</string>
    <string name="str_radius_filters">Radius:</string>
    <string name="str_submit">Submit</string>
    <string name="title_activity_dishes_">Dishes_Activity</string>
    <string name="str_add_dish">Add Dish</string>

</resources>
