<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hortashorchatas.foodcrumbs.Map_View_Activity" >

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search" 
        android:showAsAction="ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item android:id="@+id/action_directions"
        android:icon="@drawable/ic_action_directions"
        android:title="@string/action_direction" 
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

</menu>
