<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hortashorchatas.foodcrumbs.Filters_Activity$PlaceholderFragment" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="36sp"
        android:text="@string/str_filters" />

    <TextView
        android:id="@+id/search_filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:text="@string/str_find_filters" />

    <EditText
        android:id="@+id/search_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/search_filter_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/search_filter_label"
        android:ems="10"
        android:hint="@string/str_yelp_search_query"
        android:inputType="text" />
    
	<TextView
        android:id="@+id/radius_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_filter_label"
        android:layout_marginTop="15dp"
        android:text="@string/str_radius_filters" />
	
	<Spinner
        android:id="@+id/radius_filter_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radius_label" />
	
	<RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radius_filter_spinner"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_button_filter_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/str_yelp_filter_time" />

        <RadioButton
            android:id="@+id/radio_button_filter_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/str_yelp_filter_distance" />
    </RadioGroup>
    
    <TextView
        android:id="@+id/label_text_hours_or_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radio_group"
        android:text="" />

    <EditText
        android:id="@+id/edit_text_hours_or_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radio_group"
        android:layout_toLeftOf="@+id/label_text_hours_or_miles"
        android:inputType="text" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_text_hours_or_miles"
        android:layout_marginTop="10dp"
        android:text="@string/str_find" />

</RelativeLayout>
