<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/home_page_bg"
    tools:context="com.hortashorchatas.foodcrumbs.Main_Menu_Activity" >

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:layout_marginLeft="3dp"
        android:padding="0dp"
        android:contentDescription="@string/profile_pic_des" />
    
    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" 
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:text=""
        android:color="#FFFFFF" />

    <ImageButton
        android:id="@+id/directions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/directions_button_des"
        android:src="@drawable/directions_icon"
        android:onClick="toMapView" />

    <ImageButton
        android:id="@+id/random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/directions_button"
		android:contentDescription="@string/random_button_des"
        android:src="@drawable/random_icon"
        android:onClick="toRandomGenView" />

    <ImageButton
        android:id="@+id/favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name_text"
        android:layout_alignTop="@+id/directions_button"
        android:contentDescription="@string/favorites_button_des"
        android:src="@drawable/favorites_icon" 
        android:onClick="toFavoritesView"/>

</RelativeLayout>
