<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hortashorchatas.foodcrumbs.Directions_Activity$PlaceholderFragment" >
    
    <ImageButton
    	android:id="@+id/start_location_pin_drop"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:scaleType="fitXY"
    	android:layout_alignParentRight="true"
    	android:contentDescription="@string/strt_loc_pin_drop"
    	android:src="@drawable/ic_action_pin" /> 
    	   
   <ImageButton
    	android:id="@+id/end_location_pin_drop"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:scaleType="fitXY"
    	android:layout_alignParentRight="true"
    	android:layout_below="@+id/start_location_pin_drop"
    	android:contentDescription="@string/end_loc_pin_drop"
    	android:src="@drawable/ic_action_pin" />    	
    	
    <EditText
        android:id="@+id/start_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/start_location_pin_drop"
        android:layout_alignParentLeft="true"
        android:inputType="text" />

    <EditText
        android:id="@+id/end_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/end_location_pin_drop"
        android:layout_toLeftOf="@+id/end_location_pin_drop"
        android:hint="@string/str_end_location"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/filter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/end_location_pin_drop"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="" />
    
    <EditText 
        android:id="@+id/yelp_search_query_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/end_location_pin_drop"
        android:layout_below="@+id/filter_text"
        android:hint="@string/str_yelp_search_query"
        android:inputType="text" />    
        
    <TextView
    	android:id="@+id/search_radius_label"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@+id/yelp_search_query_filter" 
    	android:layout_marginTop="10dp"
    	android:text=""
    	/>

    <Spinner
        android:id="@+id/yelp_distance_filter_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yelp_search_query_filter"
        android:layout_toRightOf="@+id/search_radius_label" />
    <RadioGroup 
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/yelp_distance_filter_spinner"
        android:orientation="horizontal"
        >
    	<RadioButton
        	android:id="@+id/radio_button_filter_time"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/str_yelp_filter_time"
        	android:onClick="onRadioButtonClicked"
        	/>
    	<RadioButton
        	android:id="@+id/radio_button_filter_distance"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/str_yelp_filter_distance"
        	android:onClick="onRadioButtonClicked"
        	/>
	</RadioGroup>
    <TextView
        android:id="@+id/label_text_hours_or_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radio_group"
        android:text="" />
    
    <EditText
        android:id="@+id/edit_text_hours_or_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radio_group"
        android:layout_toLeftOf="@+id/label_text_hours_or_miles"
        android:inputType="number"
        />

</RelativeLayout>
