<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hortashorchatas.foodcrumbs.Main_Menu_Activity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_pic_des"
        android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

    <ImageButton
        android:id="@+id/directions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignTop="@+id/favorites_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/directions_button_des"
        android:src="@drawable/directions_icon"
        android:onClick="toMapView" />

    <ImageButton
        android:id="@+id/random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"      
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/directions_button"
		android:contentDescription="@string/random_button_des"
        android:src="@drawable/random_icon"
        android:onClick="toRandomGenView" />

    <ImageButton
        android:id="@+id/favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name_text"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/favorites_button_des"
        android:src="@drawable/favorites_icon" 
        android:onClick="toFavoritesView"/>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="" />
    
    <TextView
        android:id="@+id/favorites_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/favorites_button"
        android:layout_below="@+id/favorites_button"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/favorites_button_des" />
    
    <TextView
        android:id="@+id/directions_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/directions_button"
        android:layout_below="@+id/directions_button"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/directions_button_des" />
    
    <TextView
        android:id="@+id/random_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/random_button"
        android:layout_below="@+id/random_button"
        android:layout_marginLeft="22.5dp"
        android:layout_marginTop="5dp"
        android:text="@string/random_button_des" />

</RelativeLayout>
